@@ -129,6 +129,9 @@ V0.17
       + Sebastien Aperghis-Tramoni reports that File::Temp works
         with perl 5.004.
 
+      + Use effective uid for security check rather than real uid
+      (Alexey Tourbin)
+
 V0.16
       - Remove leftover debugging statement!
 V0.15
